inhoud voorpagina en logo's toegevoegd

--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -7,18 +7,34 @@
     <link href="assets/css/screen.css" rel="stylesheet">
     <meta name="author" content="Matthias Bruynooghe"/>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
+<header><h1>Adviesbureau Denoo - Denoo</h1>
+    <nav>
+        <ul>
+            <li>Wie zijn wij?</li>
+            <li>Personen</li>
+            <li>Varia</li>
+            <li>Ondernemingen</li>
+            <li>Maatschapijen</li>
+            <li>AssurMifid</li>
+            <li>Hypotheek</li>
+        </ul>
 
-
-
-
-
-
-
-
-
+    </nav>
+</header>
+<h2>Wie zijn wij?</h2>
+<p>
+    Adviesburo Denoo - Denoo is een familiebedrijf met heel wat ervaring in de verzekeringssector en is gespecialiseerd
+    in het aanbieden van complete verzekeringsoplossingen voor gezinnen, kleine - en middelgrote ondernemingen.</p>
+<p>Als onafhankelijk verzekeringsmakelaar hebben wij de mogelijkheid uw verzekeringspakket samen te stellen bij de verzekeraars die het best bij uw persoonlijke situatie passen.</p>
+<h2>Contact</h2>
+<span>Adres:</span>
+<address>Ruddervoordestraat 128 8820 Torhout</address>
+<span>GSM:</span><a href="tel://+478902949">0478/90.29.49</a>
+<span>Vaste Telefoon:</span><a href="tel://050215272">050/21.52.72</a>
+<span>e-mail:</span><a href="mailto:info@denoo.be">info@denoo.be</a>
 
 
 <script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
