--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -5,16 +5,27 @@
 
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/screen.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta name="author" content="Matthias Bruynooghe"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-<header><h1>Adviesbureau Denoo - Denoo</h1>
+<header><img src="images/add%20logo.gif">
     <nav>
         <ul>
-            <li>Wie zijn wij?</li>
-            <li>Personen</li>
+            <li><a tabindex="-1" class="Contact">Wie zijn wij
+               </a></li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" type="button" data-toggle="dropdown">Personen
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#" class="leven" tabindex="-1">Leven</a></li>
+                    <li><a href="#" class="Pensioen" tabindex="-1">Pensioen</a></li>
+                    <li><a href="#" class="Hospitalisatie" tabindex="-1">Hospitalisatie</a></li>
+                    <li><a href="#" class="Uitvaart" tabindex="-1">Uitvaart</a></li>
+                </ul>
+            </li>
             <li>Varia</li>
             <li>Ondernemingen</li>
             <li>Maatschapijen</li>
@@ -22,22 +33,48 @@
             <li>Hypotheek</li>
         </ul>
 
+        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Tutorials
+            <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+            <li><a tabindex="-1" href="#">HTML</a></li>
+            <li><a tabindex="-1" href="#">CSS</a></li>
+            <li class="dropdown-submenu">
+                <a class="test" tabindex="-1" href="#">New dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
+                    <li><a tabindex="-1" href="#">2nd level dropdown</a></li>
+                    <li class="dropdown-submenu">
+                        <a class="test" href="#">Another dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">3rd level dropdown</a></li>
+                            <li><a href="#">3rd level dropdown</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+        </div>
+
+
     </nav>
 </header>
-<h2>Wie zijn wij?</h2>
-<p>
-    Adviesburo Denoo - Denoo is een familiebedrijf met heel wat ervaring in de verzekeringssector en is gespecialiseerd
-    in het aanbieden van complete verzekeringsoplossingen voor gezinnen, kleine - en middelgrote ondernemingen.</p>
-<p>Als onafhankelijk verzekeringsmakelaar hebben wij de mogelijkheid uw verzekeringspakket samen te stellen bij de verzekeraars die het best bij uw persoonlijke situatie passen.</p>
-<h2>Contact</h2>
-<span>Adres:</span>
-<address>Ruddervoordestraat 128 8820 Torhout</address>
-<span>GSM:</span><a href="tel://+478902949">0478/90.29.49</a>
-<span>Vaste Telefoon:</span><a href="tel://050215272">050/21.52.72</a>
-<span>e-mail:</span><a href="mailto:info@denoo.be">info@denoo.be</a>
-
-
-<script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
+<section class="Contact"><h2>Wie zijn wij?</h2>
+    <p>
+        Adviesburo Denoo - Denoo is een familiebedrijf met heel wat ervaring in de verzekeringssector en is
+        gespecialiseerd
+        in het aanbieden van complete verzekeringsoplossingen voor gezinnen, kleine - en middelgrote ondernemingen.</p>
+    <p>Als onafhankelijk verzekeringsmakelaar hebben wij de mogelijkheid uw verzekeringspakket samen te stellen bij de
+        verzekeraars die het best bij uw persoonlijke situatie passen.</p>
+    <h2>Contact</h2>
+    <span>Adres:</span>
+    <address>Ruddervoordestraat 128 8820 Torhout</address>
+    <span>GSM:</span><a href="tel://+478902949">0478/90.29.49</a>
+    <span>Vaste Telefoon:</span><a href="tel://050215272">050/21.52.72</a>
+    <span>e-mail:</span><a href="mailto:info@denoo.be">info@denoo.be</a>
+</section>
+<footer><a href="#" class="Contact">Contact</a></footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
