--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -20,7 +20,11 @@
                 <a class="dropdown-toggle" type="button" data-toggle="dropdown">Personen
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#" class="leven" tabindex="-1">Leven</a></li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Leven <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#">Kindersparen</a></li>
+                            <li><a tabindex="-1" href="#">Leven</a></li></ul>
                     <li><a href="#" class="Pensioen" tabindex="-1">Pensioen</a></li>
                     <li><a href="#" class="Hospitalisatie" tabindex="-1">Hospitalisatie</a></li>
                     <li><a href="#" class="Uitvaart" tabindex="-1">Uitvaart</a></li>
