nav heeft meer dropdown (nog niet af)

--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -14,34 +14,130 @@
 <header><img src="images/add%20logo.gif">
     <nav>
         <ul>
-            <li><a tabindex="-1" class="Contact">Wie zijn wij
-               </a></li>
+            <li><a tabindex="-1" class="Contact">Wie zijn wij</a></li>
             <li class="dropdown">
                 <a class="dropdown-toggle" type="button" data-toggle="dropdown">Personen
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li class="dropdown-submenu">
-                        <a class="drop" tabindex="-1" href="#">Leven <span class="caret"></span></a>
+                        <a class="drop" tabindex="-1" href="#">Leven<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a tabindex="-1" href="#">Kindersparen</a></li>
-                            <li><a tabindex="-1" href="#">Leven</a></li></ul>
+                            <li><a tabindex="-1" href="#" class="Kindersparen">Kindersparen</a></li>
+                            <li><a tabindex="-1" href="#" class="Leven">Leven</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#" class="Pensioen" tabindex="-1">Pensioen</a></li>
                     <li class="dropdown-submenu">
                         <a class="drop" tabindex="-1" href="#">Hospitalisatie <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a tabindex="-1" href="#" class="DKV">Plan DKV</a></li>
                             <li><a tabindex="-1" href="#" class="Horizon">Plan Horizon</a></li>
-                    <li><a tabindex="-1" href="#" class="Clinicomfort">Plan Clinicomfort</a></li>
-            <li><a tabindex="-1" href="#" class="Clinibudget">Plan Clinibudget</a></li></ul>
-        <li><a href="#" class="Uitvaart" tabindex="-1">Uitvaart</a></li>
-
-
-
-        </ul>
+                            <li><a tabindex="-1" href="#" class="Clinicomfort">Plan Clinicomfort</a></li>
+                            <li><a tabindex="-1" href="#" class="Clinibudget">Plan Clinibudget</a></li>
+                            <li><a tabindex="-1" href="#" class="Zorgplan">Zorgplan</a></li>
+                            <li><a tabindex="-1" href="#" class="Tandzorg">Tandzorg</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="Uitvaart" tabindex="-1">Uitvaart</a></li>
+                </ul>
             </li>
-            <li>Varia</li>
-            <li>Ondernemingen</li>
-            <li>Maatschapijen</li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" type="button" data-toggle="dropdown">Varia
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Auto<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="GrOmnium">Grote omnium</a></li>
+                            <li><a tabindex="-1" href="#" class="KlOmnium">Kleine omnium</a></li>
+                            <li><a tabindex="-1" href="#" class="Bijstand">Bijstand</a></li>
+                            <li><a tabindex="-1" href="#" class="Rechtsbijstand">Rechtsbijstand</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="Brand" tabindex="-1">Brand</a></li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Paarden <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="Dood">Dood</a></li>
+                            <li><a tabindex="-1" href="#" class="DO">Dood en ongeval</a></li>
+                            <li><a tabindex="-1" href="#" class="ODA">ODA</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">BA <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="Familiale">Familiale</a></li>
+                            <li><a tabindex="-1" href="#" class="Leraar">Leraar</a></li>
+                            <li><a tabindex="-1" href="#" class="Kinderopvang">Kinderopvang</a></li>
+                            <li><a tabindex="-1" href="#" class="Paard">Paard</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li><a tabindex="-1" class="Ondernemingen">Ondernemingen</a></li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" type="button" data-toggle="dropdown">Maatschapijen
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Allianz<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="AlAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="AlSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">AXA<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="AxAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="AxSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Baloise<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="BaAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="BaSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Dela<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="DeAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="DeSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">DKV<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="DKAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="DKSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Euromex<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="EuAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="EuSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Optimco<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="OpAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="OpSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu">
+                        <a class="drop" tabindex="-1" href="#">Paarden<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a tabindex="-1" href="#" class="PaAV">Alg. voorwaarden</a></li>
+                            <li><a tabindex="-1" href="#" class="PaSchade">Schade</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#" class="Noodnummers" tabindex="-1">Noodnummers</a></li>
+                </ul>
+            </li>
             <li>AssurMifid</li>
             <li>Hypotheek</li>
         </ul>
