Indeling van nav is klaar

--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -14,9 +14,9 @@
 <header><img src="images/add%20logo.gif">
     <nav>
         <ul>
-            <li><a tabindex="-1" class="Contact">Wie zijn wij</a></li>
+            <li><a href="#" tabindex="-1" class="Contact">Wie zijn wij</a></li>
             <li class="dropdown">
-                <a class="dropdown-toggle" type="button" data-toggle="dropdown">Personen
+                <a class="dropdown-toggle" href="#" data-toggle="dropdown">Personen
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li class="dropdown-submenu">
@@ -42,7 +42,7 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a class="dropdown-toggle" type="button" data-toggle="dropdown">Varia
+                <a class="dropdown-toggle" href="#" data-toggle="dropdown">Varia
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li class="dropdown-submenu">
@@ -74,9 +74,9 @@
                     </li>
                 </ul>
             </li>
-            <li><a tabindex="-1" class="Ondernemingen">Ondernemingen</a></li>
+            <li><a href="#" tabindex="-1" class="Ondernemingen">Ondernemingen</a></li>
             <li class="dropdown">
-                <a class="dropdown-toggle" type="button" data-toggle="dropdown">Maatschapijen
+                <a class="dropdown-toggle" href="#" data-toggle="dropdown">Maatschapijen
                     <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li class="dropdown-submenu">
@@ -138,8 +138,16 @@
                     <li><a href="#" class="Noodnummers" tabindex="-1">Noodnummers</a></li>
                 </ul>
             </li>
-            <li>AssurMifid</li>
-            <li>Hypotheek</li>
+            <li class="dropdown">
+                <a class="dropdown-toggle" href="#" data-toggle="dropdown">AssurMifid
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#" class="Assurmifid" tabindex="-1">Assurmifid</a></li>
+                    <li><a href="#" class="Vergoedingen" tabindex="-1">Vergoedingen</a></li>
+                    <li><a href="#" class="Belangenconflicten" tabindex="-1">Belangenconflicten</a></li>
+                </ul>
+            </li>
+            <li><a href="#" tabindex="-1" class="Hypotheek">Hypotheek</a></li>
         </ul>
     </nav>
 </header>
