--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/screen.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
-    <meta name="author" content="Matthias Bruynooghe & Lei Chi Mei"/>
+    <meta name="author" content="Bruynooghe Matthias & Lei Chi Mei"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
