nav, pagina content en footer veranderd
je hoeft niet op de letters te klikken op de nav om ander content
zichtbaar te maken.
je kan nu switchen van content.
footer zit nu vast vanonder

--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Title</title>
+    <title>Adviesburo Denoo</title>
 
     <link href="assets/css/reset.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -151,7 +151,8 @@
         </ul>
     </nav>
 </header>
-<section class="Contact"><h2>Wie zijn wij?</h2>
+<section id="Contact">
+    <h2>Wie zijn wij?</h2>
     <p>
         Adviesburo Denoo - Denoo is een familiebedrijf met heel wat ervaring in de verzekeringssector en is
         gespecialiseerd
@@ -164,6 +165,32 @@
     <span>GSM:</span><a href="tel://+478902949">0478/90.29.49</a>
     <span>Vaste Telefoon:</span><a href="tel://050215272">050/21.52.72</a>
     <span>e-mail:</span><a href="mailto:info@denoo.be">info@denoo.be</a>
+</section>
+
+<section id="Kindersparen" class="hide">
+    <h2>Kindersparen - Jeugdsparen - Voorhuwelijkssparen</h2>
+    <p>
+        U koos voor kinderen. Het zijn schatten! U krijgt van hen veel terug, zij geven uw leven een extra dimensie.
+        U denkt ongetwijfeld aan hun toekomst, hun eigenstart in het leven.
+        Hoe groter zij worden hoe vaker ook zij de vraag krijgen « Wat wil je later worden ?»
+        Uw kinderen zullen van u de kans krijgen om verder te studeren, later zelfstandig te gaan leven, te huwen, een eigenzaak op te bouwen, …
+        En precies hier wil u hen helpen. Deze beslissingen in hun leven zijn investeringen waarbij u graag meer zou geven dan enkel goede raad.
+        U wil dan ook sparen voor uw kinderen. Een steun op de sleutelmomenten in hun leven wordt met eeuwige dankbaarheid beantwoord.
+        Er is inderdaad kinderbijslag, er zijn studiebeurzen, en gelukkig maar. Alleen … hoe lang nog tegen de huidige voorwaarden?
+        Om zeker te zijn dat uw gespaard bedrag ook werkelijk op het door u gekozen moment vrij komt volstaat een klassiek spaarboekje niet:
+        er zijn immers bijzondere aankopen, uw kinderen willen financiële zelfstandigheid.
+        Daarom kunnen wij u een aantal bijzondere interessante spaarformules aanbieden die niet alleen de echte zekerheid bieden van een gegarandeerd kapitaal,
+        maar ook de soepelheid die u op prijs stelt…De unieke flexibiliteit is één van de grote pluspunten van het kinderspaarplan. Tot de 25ste verjaardag
+        (of een ander gekozen leeftijd) hebt u de volledige controle over het spaargeld. Dat garandeert meteen dat het geld ook nuttig wordt besteed.
+        Droomt uw kind van een bromfiets of een PC ? Dan kunt u steeds een deel van het gespaarde geld gebruiken. Ook geld bijstorten kan zonder problemen.
+        U wenst voor uw (klein-)kinderen een kapitaal te vormen via een spaaroplossing met gewaarborgde minimumrentevoet.
+    </p>
+    <p>Wat indien u iets overkomt?</p>
+    <p>
+        Stel: één van u beiden overlijd of wordt volledig invalide.
+        In dit geval neemt de verzekeringsmaatschappij de spaarinspanning over, en dat tot het kind 25 jaar (of een ander gekozen leeftijd)
+        is of tot de periode van invaliditeit voorbij is. Kortom, wat er ook gebeurt, uw kind geniet steeds een financiële zekerheid
+    </p>
 </section>
 <footer><a href="#" class="Contact">Contact</a></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
