pensioen toegevoegd en footer blijft nu super mooi staan

--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -151,6 +151,7 @@
         </ul>
     </nav>
 </header>
+
 <section id="Contact">
     <h2>Wie zijn wij?</h2>
     <p>
@@ -166,7 +167,6 @@
     <span>Vaste Telefoon:</span><a href="tel://050215272">050/21.52.72</a>
     <span>e-mail:</span><a href="mailto:info@denoo.be">info@denoo.be</a>
 </section>
-
 <section id="Kindersparen" class="hide">
     <h2>Kindersparen - Jeugdsparen - Voorhuwelijkssparen</h2>
     <p>
@@ -192,7 +192,50 @@
         is of tot de periode van invaliditeit voorbij is. Kortom, wat er ook gebeurt, uw kind geniet steeds een financiële zekerheid
     </p>
 </section>
+<section id="Pensioen" class="hide">
+    <h2>Pensioensparen-pensioenspaarverzekering</h2>
+
+    <h3>Waarom aan pensioensparen doen?</h3>
+    <p>een spaarpot  aanleggen voor later (een appeltje tegen de dorst)</p>
+    <p>+</p>
+    <p>een groot fiscaal voordeel genieten van 30%</p>
+    <p>+</p>
+    <p>een <u>gewaarborgd rendement</u> door de verzekeringsmaatschappij</p>
+    <p>+</p>
+    <p>elk jaar een bijkomende bonus (winstaandelen) genieten</p>
+    <p>waarom nog wachten?</p>
+    <p>neem vandaag nog <a href="mailto:info@denoo.be?subject=pensioensparen">contact op met uw makelaar Denoo - Denoo</a></p>
+
+    <h4>Ieder van ons zal voor zichzelf moeten zorgen!</h4>
+    <p>
+        Je zal mij niet horen zeggen dat solidariteit nationaal gesproken geen goede zaak is.
+        Dit waarborgt immers de gepensioneerde voor morgen steeds een nuttig minimuminkomen.
+        Maar wie verzekerd wil zijn van een behoorlijk pensioen, voorziet zich steeds meer verplicht zelf voor een spaarpotje te zorgen.
+        Dat principe heet: "de individuele kapitalisatie". In dit systeem bouwt ieder door periodieke stortingen een pensioen voor zichzelf op.
+        Dat is dus meer "ieder voor zich" tegenover het principe van de nationale solidariteit.
+    </p>
+
+    <h4>België kent qua pensioensparen drie pijlers:</h4>
+    <p>
+        1<sup>e</sup> pijler De eerste pijler heeft betrekking op het wettelijk pensioen, gebaseerd op totale solidariteit (verdeelsleutel).
+        Het staat vast dat de sector niet bepaald in blakende gezondheid verkeert door de reeds genoemde oorzaken
+        (daling van het geboortecijfer, afname van de werkende bevolking, vergrijzing, …)
+    </p>
+    <p>
+        2<sup>e</sup> pijler De tweede pijler heeft betrekking op de pensioenen die door zelfstandigen voor eigen rekening
+        of door bedrijven ten gunstig van hun medewerkers en managers worden gefinancierd: groepsverzekeringen, bedrijfsleidersverzekeringen.
+        Deze tweede pijler is gebaseerd op een vorm van solidariteit die al een stuk beperkter is dan die van de eerste pijler:
+        ze geldt alleen voor het eigen personeel van de onderneming (managers, het voltallige personeel of een gedeelte daarvan).
+    </p>
+    <p><u>
+        3<sup>e</sup> pijler Deze derde pijler wordt gevormd door het individuele sparen: individuele levensverzekeringen of pensioensparen.
+        In tegenstelling tot de eerste pijler is de derde niet verplicht maar toch een sterke aanraden wil je het straks niet met
+        de helft minder moeten doen.
+    </u></p>
+</section>
+
 <footer><a href="#" class="Contact">Contact</a></footer>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/js/main.js"></script>
