css code beter en nog meer content toegevoegd

--- a/Denoo Denoo advies kantoor/index.html
+++ b/Denoo Denoo advies kantoor/index.html
@@ -233,6 +233,75 @@
         de helft minder moeten doen.
     </u></p>
 </section>
+<section id="DKV" class="hide">
+    <h2>Wat is het doel van een hospitalisatieverzekering bij DKV?</h2>
+    <p>
+        Een hospitalisatieverzekering betaalt de kosten terug die aangerekend worden voor een opname in een ziekenhuis ingevolge ziekte,
+        een bevalling of een ongeval en die voor uw rekening blijven na de tegemoetkoming van het ziekenfonds.
+        Deze laatste betaalt wel een stuk terug, maar de rest dient de patiënt zelf bij te leggen indien hij niet verzekerd is.
+    </p>
+    <p>
+        Wij werken met DKV, een hospitalisatieverzekering die de kosten terugbetaalt, zonder addertjes onder het gras.
+        U kiest waar, door wie en in welke kamer u behandeld wenst te worden.
+        Nog sterker de maatschappijDKV bepaalt contractueel dat eenmaal u bij hen verzekerd bent, zij u nooit meer mogen opzeggen !!
+    </p>
+    <a href="https://www.dkvhospi.be?agent_id=991416&agent_token=d03ecba35ef3f334cdb021a8b6e064a6&utm_source=agent_991416&utm_medium=banner_300x250&utm_campaign=purl_generator">DKV(AFBEELDING)</a>
+</section>
+<section id="Clinicomfort" class="hide">
+    <h2>Plan Clinicomfort</h2>
+    <a href="#">Korte beschrijving (LINK NAAR PDF)</a>
+</section>
+<section id="GrOmnium" class="hide">
+    <h2>Grote Omnium : uw auto altijd beschermd</h2>
+    <p>
+        De Grote Omnium biedt u de meest complete bescherming.
+        Bent u in fout of niet? Uw voertuig is altijd verzekerd tegen:
+    </p>
+    <ul>
+        <li>brand;</li>
+        <li>diefstal;</li>
+        <li>vandalisme;</li>
+        <li>glasbreuk;</li>
+        <li>natuurkrachten;</li>
+        <li>aanrijding met dieren;</li>
+        <li>voertuigschade;</li>
+        <li>bijstand na ongeval;</li>
+    </ul>
+
+    <h3>Speciale service</h3>
+    <p>
+        Is uw verzekerde personenwagen niet meer rijvaardig als gevolg brand, diefstal of een verzekerd ongeval in België,
+        groothertogdom Luxemburg of Zeeuws-Vlaanderen? Dan zorgt deze polis ervoor dat:
+    </p>
+    <ul>
+        <li>uw auto gratis wordt gesleept naar een garage van uw keuze;</li>
+        <li>u een gratis vervangwagen krijgt gedurende 7 dagen (vanaf de dag van het ongeval);</li>
+    </ul>
+
+    <h3>Volledige Service Auto</h3>
+    <p>
+        Doet u een beroep op het Full Service Auto-systeem ?
+        Dan brengt een takeldienst het voertuig naar een Regionaal Service Centrum en krijgt u een vervangwagen zolang de herstelling duurt:
+        maximaal 20 dagen bij totaal verlies, 30 dagen bij diefstal.
+    </p>
+    <p>
+        Wordt uw gestolen voertuig teruggevonden binnen 30 dagen, dan kunt u de vervangwagen gebruiken tot u weer over uw voertuig beschikt.
+        Deze bijkomende periode bedraagt maximaal 30 dagen.
+    </p>
+    <p>
+        Bij glasbreuk maken wij voor u een afspraak bij de specialist Carglass. U hoeft dan geen vrijstelling te betalen.
+    </p>
+
+    <h3>Geen of voordelige vrijstelling</h3>
+    <p>
+        De vrijstelling – het deel van de schade dat voor uw rekening is – hoeft u niet te betalen bij brand, diefstal en natuurkrachten.
+        Bij aanrijding met dieren en bij vandalisme betaalt u geen vrijstelling als u klacht hebt ingediend.
+        En als u bij glasbreuk uw autoruit laat herstellen bij een door ons aangeduide hersteller,
+        moet u de vrijstelling van 123,95 EUR ook niet betalen.
+        De vrijstelling voor de dekking stoffelijke schade aan uw voertuig kan gekozen worden.
+        Wilt u deze vrijstelling verhogen? Dan betaalt u minder premie.
+    </p>
+</section>
 
 <footer><a href="#" class="Contact">Contact</a></footer>
 
