--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Title</title>
-
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/screen.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
-    <meta name="author" content="Bruynooghe Matthias & Lei Chi Mei"/>
+    <meta name="author" content="Matthias Bruynooghe & Lei Chi Mei"/>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MaKiDev</title>
 </head>
 <body>
-<h1>Huidige projecten</h1>
-<ul>
-    <li><a href="Denoo%20Denoo%20advies%20kantoor/index.html">Denoo Denoo advies kantoor</a></li>
-</ul>
+    <ul>
+        <li>Wat doen wij?</li>
+        <li>MaKiDev</li>
+        <li>Wie zijn wij?</li>
+    </ul>
+    <section>
+        <h2>Wat doen wij?</h2>
 
+        <p>Wij maken websites voor mensen die nood aan hebben. Wat is de prijs? Voorlopig gratis als onze klant al een server en domeinnaam heeft.</p>
+    </section>
+    <section>
+        <h2>Wie zijn wij?</h2>
+        <p>Wij zijn studenten van Howest in Brugge. Wij studeren allebei toegepaste informatica en system & software engineer als afstudeerrichting. De naam MaKiDev is de samenstelling van onze eerste 2 letters.</p>
+        <article>
+            <h3>Matthias Bruynooghe</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi asperiores atque consectetur, consequatur enim eos facere inventore magni nam nesciunt nostrum officiis optio possimus, quae quasi recusandae repellendus, soluta voluptatibus?</p>
+        </article>
+        <article>
+            <h3>Kiki Lei</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid debitis ducimus enim excepturi hic minima voluptatibus. Ad aliquam dolores expedita illo laboriosam magnam neque nihil odio voluptas voluptate! Delectus?</p>
+        </article>
+    </section>
 
-
-
-
-
-
-
-
-
-<script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
-<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
