--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <ul>
-        <li>Wat doen wij?</li>
-        <li>MaKiDev</li>
-        <li>Wie zijn wij?</li>
+        <li><a href="#what">Wat doen wij?</a></li>
+        <li><a href="#">MaKiDev</a></li>
+        <li><a href="#who">Wie zijn wij?</a></li>
     </ul>
-    <section>
+    <section id="what">
         <h2>Wat doen wij?</h2>
 
         <p>Wij maken websites voor mensen die nood aan hebben. Wat is de prijs? Voorlopig gratis als onze klant al een server en domeinnaam heeft.</p>
     </section>
-    <section>
+    <section id="who">
         <h2>Wie zijn wij?</h2>
         <p>Wij zijn studenten van Howest in Brugge. Wij studeren allebei toegepaste informatica en system & software engineer als afstudeerrichting. De naam MaKiDev is de samenstelling van onze eerste 2 letters.</p>
         <article>
